Fixed navbar dropdown element colour on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -43,10 +43,12 @@ body {
 	background-color: #6767DA;
 }
 
+/* Navbar desktop tabs */
 .navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover{
 	color: #FFFFFF;
 }
 
+/* Navbar heading */
 .navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
     color: #FFFFFF;
 }
@@ -158,6 +160,15 @@ body {
 	
 	.btnBackToForm {
 		display: inline;
+	}
+	
+	/* Navbar mobile dropdown elements */
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus, .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+		color: #FFFFFF;
+	}
+	
+	.dropdown-header {
+		color: #000000;
 	}
 }
 /*** END MOBILE STYLES ***/
